--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.560.0",
     "next": "^16.0.10",
     "react": "19.2.1",
+    "react-color": "^2.19.3",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
