--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "next": "^16.0.10",
     "react": "19.2.1",
     "react-color": "^2.19.3",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
