Integated background_removal_api

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,11 @@
 fastapi
-uvicorn
+uvicorn[standard]
 pillow
 python-multipart
 groq
 python-dotenv==1.0.1
- 
+numpy
+onnxruntime
+pooch
+tqdm
+rembg
